--- a/RunDo/RunDoApp/templates/RunDoApp/extra.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/extra.html
@@ -163,6 +163,25 @@
     padding-top: 15px;
 }
 
-
+ // pkg = {
+        //     api_key: '8307a569626a485f9180ff1b21f97a7f',
+        //     q: query,
+        //     format: 'json'
+        // };
+        // $.ajax({
+        //     url: "https://api.nal.usda.gov/ndb/search/",
+        //     data: pkg,
+        //     dataType: "json",
+        //     success: function (data) {
+        //
+        //         console.log(data);
+        //         for (let i = 0; i < 10; i++){
+        //             let food_item = document.createElement('div');
+        //             food_item.innerText = data.list.item[i].name;
+        //             output.appendChild(food_item);
+        //             console.log(food_item)
+        //         }
+        //     }
+        // });
 
 
