successfully saved data from api to backend

--- a/RunDo/RunDoApp/templates/RunDoApp/base.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/base.html
@@ -57,9 +57,6 @@
 </header>
 
 
-
-
-
 <body>
 
 </div>
@@ -67,6 +64,6 @@
     {% block content %}
     {% endblock %}
     <hr/>
-    <div id="copyright">(c) rUNDO inc</div>
+    <div id="copyright">(c) rUNDO inc</div>                   <!-- make this stay at bottom of page*****************8 -->
 </body>
 
