--- a/RunDo/RunDoApp/templates/RunDoApp/profile.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/profile.html
@@ -1,10 +1,6 @@
 {% extends 'RunDoApp/base.html' %}
 
-
-
 {% block content %}
-
-<hr>
 
 <div id="profileStats">
 <h3>Your Stats:</h3>
@@ -15,23 +11,26 @@
     <div>Fitness Level: {{fitnessLevelText}}</div>
 </div>
 
-<!--<div id="calculate">
-    <h3>Let's Calculate:</h3>
-    <div id="table">
-        <input type="text" id="quantity" placeholder="quantity"/>
-        <input type="text" id="food" placeholder="food"/>
-
-    </div>
-</div> -->
-
 <input type="text" id="food_api"/>
 <button id="call_api" class="btn bg-dark text-white">find food</button>
 
-<div id="food_list"></div>
-
+<form target="" id="resultsList" method="post" style="display:none">
+    <select id="food_list" ></select>
+    {% csrf_token %}
+    <input type="hidden" name="food_name" id="food_name">
+    <input type="hidden" name="serving_calories" id="serving_calories">
+    <input type="hidden" name="serving_units" id="serving_units">
+    <input type="hidden" name="serving_size" id="serving_size">
+    <input type="text" name="user_servings" id="user_servings" placeholder="# of servings">
+    <button type="submit" class="btn btn-secondary btn-md">Calculate</button>
+</form>
 
 <script>
 
+    document.getElementById('food_list').onchange = function(e) {
+        let index = e.target.selectedIndex;
+        e.target.children[index].onclick();
+    };
 
      function http_get(url, success) {
         let xhttp = new XMLHttpRequest();
@@ -50,7 +49,6 @@
         xhttp.send();
     }
 
-
     document.getElementById('call_api').onclick = function() {
         let output = document.getElementById("food_list");
         const q = document.getElementById('food_api').value;
@@ -58,25 +56,31 @@
             output.removeChild(output.firstChild)
         }
 
-        let url = "https://trackapi.nutritionix.com/v2/search/instant/?branded=false&query="+q;
+        let url = "https://trackapi.nutritionix.com/v2/search/instant/?branded=false&detailed=true&query="+q;
         http_get(url, function(data){
-            console.log(data);
+            // console.log(data);
+            document.getElementById('resultsList').style.display = 'block';
+            let first_option = true;
             for (let i = 0; i < 10; i++){
-                let food_item = document.createElement('div');
-                food_item.innerText = data.common[i].food_name;
-                food_item.style.color = 'white';
-                output.appendChild(food_item);
+                let food_name = document.createElement('option');
+                let food = data.common[i];
+                food_name.innerText = food.food_name + ", " +  Math.round(food.full_nutrients[4].value) + " calories, " + food.serving_qty + " " + food.serving_unit;
+                food_name.onclick = function () {
+                    document.getElementById('food_name').value = food.food_name;
+                    document.getElementById('serving_calories').value = Math.round(food.full_nutrients[4].value);
+                    document.getElementById('serving_size').value = food.serving_qty;
+                    document.getElementById('serving_units').value = food.serving_unit;
+                };
+                output.appendChild(food_name);
+
+                if (first_option) {
+                    first_option = false;
+                    food_name.onclick();
+                }
             }
+
         });
     };
-        //
-        //     branded: false,
-        //     q: "json",
-        //     success: function (data) {
-        //         console.log(data);
-
-        //     }
-        // };
 
 </script>
 
