--- a/RunDo/RunDoApp/templates/RunDoApp/base.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/base.html
@@ -29,7 +29,7 @@
                    </li>
 
                    <li class="nav-item">
-                       <a class="nav-link text-secondary" href="#">View History</a>     <!-- ******need a new html page with user history *********-->
+                       <a class="nav-link text-secondary" href="{% url 'RunDoApp:viewHistory' %}">View History</a>     <!-- ******need a new html page with user history *********-->
                    </li>
 
                    {% if request.user.is_authenticated %}
