--- a/RunDo/RunDoApp/templates/RunDoApp/registration.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/registration.html
@@ -44,8 +44,9 @@
             <input type="text" class="form-control" name="weight" placeholder="weight (lbs)">
           </div>
           <div class="fitnessdropdwn">
-            <select name="fitnessLevel">
-                <option value="" selected="selected" disabled="disabled">Pick a Fitness Level</option>
+            <select name="runSpeed">
+                {% for %}
+                <option value="" selected="selected" disabled="disabled">MPH </option>
                 <option value="1">Newbie</option>
                 <option value="2">Average</option>
                 <option value="3">Athletic</option>
