--- a/RunDo/RunDoApp/templates/RunDoApp/viewhistory.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/viewhistory.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<ul>
+<ul style="color: white">
     {% for history in most_recent_history %}
        <li>{{history.food_name}}</li>
     {% endfor %}
