--- a/RunDo/RunDoApp/templates/RunDoApp/base.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/base.html
@@ -32,6 +32,10 @@
                        <a class="nav-link text-secondary" href="{% url 'RunDoApp:viewHistory' %}">Calculate</a>     <!-- ******need a new html page with user history *********-->
                    </li>
 
+                   <li class="nav-item">
+                       <a class="nav-link text-secondary" href="{% url 'RunDoApp:savedMeals' %}">Saved Meals</a>     <!-- ******need a new html page with user history *********-->
+                   </li>
+
                    {% if request.user.is_authenticated %}
                        <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
