--- a/RunDo/RunDoApp/templates/RunDoApp/savedmeals.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/savedmeals.html
@@ -4,10 +4,8 @@
 
 <div class="col-sm-6 text-right">
     <ul class="list-group" style="color:black">
-        <li class="list-group-item list-group-item-dark">Recent History</li>
-        {% for history in most_recent_history %}
-           <li class="list-group-item list-group-item-dark">{{history.food_name}} - {{history.time_to_run}} hours</li>
-        {% endfor %}
+        <li class="list-group-item list-group-item-dark">Saved Meals</li>
+           <li class="list-group-item list-group-item-dark">'saved meals here'</li>
     </ul>
 </div>
 
