--- a/RunDo/RunDoApp/templates/RunDoApp/base.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/base.html
@@ -11,63 +11,70 @@
 </head>
 
 
-
 <header>
+    <div class="">
+        <nav class="navbar navbar-expand-md navbar-light d-flex" style="background-color: rgba(86, 59, 50,0.7);">
+       <a class="navbar-brand text-secondary" href="{% url 'RunDoApp:index' %}">rUNDO</a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+       </button>
 
-   <div class="container-fluid">
-       <nav class="navbar navbar-expand-md navbar-light d-flex" style="background-color: rgba(86, 59, 50,0.7);">
-           <a class="navbar-brand text-secondary" href="{% url 'RunDoApp:index' %}">rUNDO</a>
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-           </button>
+       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav ml-auto p-2">
+               <li class="nav-item">
+                   <a class="nav-link text-secondary" href="#">Update Profile<span class="sr-only">(current)</span></a>  <!-- ***** need a 'update/save changes' part of regisration for authenticated profiles -->
+               </li>
 
-               <ul class="navbar-nav ml-auto p-2">
-                   <li class="nav-item">
-                       <a class="nav-link text-secondary" href="#">Update Profile<span class="sr-only">(current)</span></a>  <!-- ***** need a 'update/save changes' part of regisration for authenticated profiles -->
+               <li class="nav-item">
+                   <a class="nav-link text-secondary" href="{% url 'RunDoApp:viewHistory' %}">Calculate</a>     <!-- ******need a new html page with user history *********-->
+               </li>
+
+               <li class="nav-item">
+                   <a class="nav-link text-secondary" href="{% url 'RunDoApp:savedMeals' %}">Saved Meals</a>     <!-- ******need a new html page with user history *********-->
+               </li>
+
+               {% if request.user.is_authenticated %}
+                   <li class="nav-item dropdown">
+                       <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Welcome, {{ user.username }}
+                       </a>
+                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                           <a class="dropdown-item" href="{% url 'RunDoApp:profile' %}">Profile</a>
+                       <div class="dropdown-divider"></div>
+                           <a class="dropdown-item" href="{% url 'RunDoApp:logoutUser' %}">Sign out</a>
+                       </div>
                    </li>
-
+               {% else %}
                    <li class="nav-item">
-                       <a class="nav-link text-secondary" href="{% url 'RunDoApp:viewHistory' %}">Calculate</a>     <!-- ******need a new html page with user history *********-->
+                       <a class="nav-link" href="{% url 'RunDoApp:index' %}">Sign in</a>
                    </li>
+               {% endif %}
 
-                   <li class="nav-item">
-                       <a class="nav-link text-secondary" href="{% url 'RunDoApp:savedMeals' %}">Saved Meals</a>     <!-- ******need a new html page with user history *********-->
-                   </li>
-
-                   {% if request.user.is_authenticated %}
-                       <li class="nav-item dropdown">
-                           <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                             Welcome, {{ user.username }}
-                           </a>
-                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                               <a class="dropdown-item" href="{% url 'RunDoApp:profile' %}">Profile</a>
-                           <div class="dropdown-divider"></div>
-                               <a class="dropdown-item" href="{% url 'RunDoApp:logoutUser' %}">Sign out</a>
-                           </div>
-                       </li>
-                   {% else %}
-                       <li class="nav-item">
-                           <a class="nav-link" href="{% url 'RunDoApp:index' %}">Sign in</a>
-                       </li>
-                   {% endif %}
-
-               </ul>
-           </div>
-       </nav>
-   </div>
-
+           </ul>
+       </div>
+   </nav>
+    </div>
 </header>
-
 
 <body>
 
-</div>
-    <hr style="background-color:#a754ff"/>
-    {% block content %}
-    {% endblock %}
-    <hr style="background-color:#a754ff"/>
-    <div id="copyright">(c) rUNDO inc</div>                   <!-- make this stay at bottom of page*****************8 -->
+   <div class="container-fluid">
+        <div class="">
+            <div class="">
+                <hr style="background-color:#a754ff"/>
+            </div>
+
+            <div>
+                {% block content %}
+                {% endblock %}
+            </div>
+
+            <div class="col align-content-end">
+                <hr style="background-color:#a754ff"/>
+                <div id="copyright">(c) rUNDO inc</div>                   <!-- make this stay at bottom of page************ -->
+            </div>
+        </div>
+    </div>
 </body>
 
