--- a/RunDo/RunDoApp/templates/RunDoApp/registration.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/registration.html
@@ -2,9 +2,6 @@
 
 {% block content %}
 
-<style>
-
-</style>
 <div class="container">
     <h2 id="titles">Create Account</h2>
 
@@ -13,7 +10,7 @@
         <div id="basicInfo">
             <div class="form-group col-md-6">
                 <label for="userName"></label>
-                <input type="text" class="form-control" name="user_name" placeholder="user name">
+                <input type="text" class="form-control" name="user_name" placeholder="User Name">
             </div>
             <div class="form-group col-md-6">
               <label for="inputEmail4"></label>
@@ -31,17 +28,17 @@
             <input type="radio" name="gender" id="choice" value="FEMALE" />female <br>
             <input type="radio" name="gender" id="choice" value="MALE" />male<br>
           </div>
-          <div class="form-group col-md-2">
+          <div class="form-group col-lg-2 col-md-2 col-sm-2">
             <label for=""></label>
             <input type="text" class="form-control" name="age" placeholder="Age">
           </div>
-          <div class="form-group col-md-2">
+          <div class="form-group col-2">
             <label for=""></label>
-            <input type="text" class="form-control" name="height" placeholder="height (inches)">
+            <input type="text" class="form-control" name="height" placeholder="Height (inches)">
           </div>
           <div class="form-group col-md-2">
             <label for=""></label>
-            <input type="text" class="form-control" name="weight" placeholder="weight (lbs)">
+            <input type="text" class="form-control" name="weight" placeholder="Weight (lbs)">
           </div>
 
           <div id="submit">
