--- a/RunDo/RunDoApp/templates/RunDoApp/index.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/index.html
@@ -3,28 +3,26 @@
 {% block content %}
 
 <style>
-
-
-
 </style>
 
-<a href="{%url 'RunDoApp:registration' %}">Create Account</a>
+<div class="container">
+    <a href="{%url 'RunDoApp:registration' %}">Create Account</a>
 
-{% if user.is_authenticated == False %}
+    {% if user.is_authenticated == False %}
 
-<form action="" method="post">
-    {% csrf_token %}
-      <div class="form-group">
-        <label id="homepagestuff" for="userName">User name</label>
-        <input  type="text" class="form-control col-md-6" name="user_name" aria-describedby="emailHelp" placeholder="Enter user name">
-      </div>
-      <div class="form-group">
-        <label id="homepagestuff" for="exampleInputPassword1">Password</label>
-        <input  type="password" class="form-control col-md-6" name="user_password" placeholder="Password">
-      </div>
-    <button type="submit" class="btn btn-secondary btn-md">Submit</button>
-</form>
-{% endif %}
-
+        <form action="" method="post">
+            {% csrf_token %}
+              <div class="form-group">
+                <label id="homepagestuff" for="userName">User name</label>
+                <input  type="text" class="form-control col-md-6" name="user_name" aria-describedby="emailHelp" placeholder="Enter user name">
+              </div>
+              <div class="form-group">
+                <label id="homepagestuff" for="exampleInputPassword1">Password</label>
+                <input  type="password" class="form-control col-md-6" name="user_password" placeholder="Password">
+              </div>
+            <button type="submit" class="btn btn-secondary btn-md">Submit</button>
+        </form>
+    {% endif %}
+</div>
 
 {% endblock %}
