--- a/RunDo/RunDoApp/templates/RunDoApp/profile.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/profile.html
@@ -9,7 +9,7 @@
             <div>Gender: {{profile.gender}}</div>
             <div>Height: {{profile.height}} inches</div>
             <div>Weight:{{profile.weight}} lbs</div>
-           <a type="submit" class="btn btn-secondary btn-md" href="{% url 'RunDoApp:updateprofile' %}">Update Profile</a>
+           <a type="submit" class="btn btn-secondary btn-md" href="{% url 'RunDoApp:updateProfile' %}">Update Profile</a>
         </div>
 
         <div class="col-sm-6 text-right">
